# ironhold-lib

./: .gitignore  Cargo.toml  README.md  index.html  plan.md  project_dump.py  task_history.md  walkthrough.md
assets/: project.ron  test_project.ron
assets/models/: treasure-chest-01.glb  treasure-chest-02.glb
assets/scenes/: another_scene.ron  main.ron  start-menu.ron  test_scene.ron
crates/ironhold_core/: Cargo.toml
crates/ironhold_core/src/: lib.rs  utils.rs
crates/ironhold_core/src/capabilities/: animation.rs  camera.rs  mod.rs  player.rs
crates/ironhold_core/src/runtime/: actions.rs  messages.rs  mod.rs  scene_manager.rs
crates/ironhold_core/src/schema/: level.rs  mod.rs  player.rs  project.rs  ui.rs
crates/ironhold_core/tests/: integration_tests.rs  ron_validation.rs
crates/ironhold_native/: Cargo.toml
crates/ironhold_native/src/: main.rs
crates/ironhold_web/: Cargo.toml
crates/ironhold_web/src/: lib.rs
docs/: 00_overview.md  10_architecture.md  20_data_formats.md  30_runtime_events_and_logic.md  40_determinism_and_networking.md  50_roadmap_and_milestones.md  60_contributing.md  STATUS.md
