[workspace]
resolver = "2"
members = [
    "crates/ironhold_core",
    "crates/ironhold_native",
    "crates/ironhold_web",
]

[workspace.dependencies]
bevy = { version = "0.17.3", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.11"
bevy_common_assets = { git = "https://github.com/NiklasEi/bevy_common_assets", branch = "main" }
wasm-bindgen = "0.2"
